@@ -31,6 +31,8 @@ private:
 
 #if defined(__WXMSW__) && wxUSE_TASKBARBUTTON
     #include "wx/msw/appprogress.h"
+#elif defined(__WXOSX__)
+    #include "wx/osx/appprogress.h"
 #else
     class wxAppProgressIndicator : public wxAppProgressIndicatorBase
     {
